--- a/Nexter/starter/index.html
+++ b/Nexter/starter/index.html
@@ -14,8 +14,41 @@
 </head>
 
 <body class="container">
-    Test Test
+    <div class="sidebar">
+        Sidebar
+    </div>
 
+    <header class="header">
+        Header
+    </header>
+
+    <div class="realtor">
+        Top 3 realtors
+    </div>
+
+    <section class="features">
+        features
+    </section>
+
+    <div class="story__pictures">
+        Story pictures
+    </div>
+
+    <div class="story__content">
+        Story content
+    </div>
+
+    <section class="homes">
+        Homes
+    </section>
+
+    <section class="gallery">
+        Gallery
+    </section>
+
+    <footer class="footer">
+        Footer
+    </footer>
 </body>
 
 </html>
