--- a/Nexter/starter/index.html
+++ b/Nexter/starter/index.html
@@ -76,7 +76,8 @@
     </section>
 
     <div class="story__pictures">
-      Story pictures
+      <img src="img/story-1.jpeg" alt="Couple with new House" class="story__img--1" />
+      <img src="img/story-2.jpeg" alt="New House" class="story__img--2" />
     </div>
 
     <div class="story__content">
