--- a/Nexter/starter/index.html
+++ b/Nexter/starter/index.html
@@ -90,7 +90,25 @@
     </div>
 
     <section class="homes">
-      Homes
+      <div class="home">
+        <img src="img/house-1.jpeg" alt="House 1" class="home__img" />
+        <svg class="home__like">
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Beautiful Family House</h5>
+        <div class="home_location">
+          <svg class="home__like">
+            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <p>USA</p>
+        </div>
+      </div>
+
+      <div class="home">Home Card 2</div>
+      <div class="home">Home Card 3</div>
+      <div class="home">Home Card 4</div>
+      <div class="home">Home Card 5</div>
+      <div class="home">Home Card 6</div>
     </section>
 
     <section class="gallery">
