--- a/Nexter/starter/index.html
+++ b/Nexter/starter/index.html
@@ -123,7 +123,7 @@
           </svg>
           <p>$1,200,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
 
       <div class="home">
@@ -159,7 +159,7 @@
           </svg>
           <p>$2,750,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
 
       <div class="home">
@@ -195,7 +195,7 @@
           </svg>
           <p>$850,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
 
       <div class="home">
@@ -231,7 +231,7 @@
           </svg>
           <p>$1,950,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
 
       <div class="home">
@@ -267,7 +267,7 @@
           </svg>
           <p>$9,500,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
 
       <div class="home">
@@ -303,7 +303,7 @@
           </svg>
           <p>$600,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
     </section>
 
