--- a/Nexter/starter/index.html
+++ b/Nexter/starter/index.html
@@ -308,11 +308,12 @@
     </section>
 
     <section class="gallery">
-      Gallery
+      <img src="img/gal-1.jpeg" alt="Gallery image 1" class="gallery__img" />
+      <img src="img/gal-2.jpeg" alt="Gallery image 1" class="gallery__img" />
     </section>
 
     <footer class="footer">
-      Footer
+      footer
     </footer>
   </body>
 </html>
